samples/_failures_safe/1761433528_2fa569_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5235dccb.c: In function ‘main’:
./samples/SAFE/__tmp_5235dccb.c:162:9: error: expected declaration or statement at end of input
  162 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_5235dccb.c:162:9: error: expected declaration or statement at end of input
